# python-project-lvl3

./: .gitignore  Makefile  README.md  page.html  pyproject.toml  setup.cfg
.github/workflows/: mylint.yml  python-package.yml
page_loader/: __init__.py  cli.py  data.py  engine.py  files_dirs.py  log.py  page_loader.py  pathwork.py  resources.py  url_modifier.py
page_loader/scripts/: loader.py
pageloader/: __init__.py  cli.py  data.py  engine.py  log.py  page_loader.py
pageloader/scripts/: loader.py
tests/: test_page_loader.py
tests/fixtures/: application.css  downloaded.html  original.html  site.html
tests/fixtures/expected/site_files/: runtime.js
