[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "My third education project in online school HEXLET.IO (level 3)"
repository = "https://github.com/alexartoff/python-project-lvl3"
authors = ["alexandertarakanov <alex.artoff@gmail.com>"]
packages = [{include = "pageloader"},]

[tool.poetry.scripts]
page-loader = "pageloader.scripts.loader:main"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
pytest = "^7.1.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
